Fix text alignment of credentials info on paste

--- a/assets/src/scss/pages/dashboard.scss
+++ b/assets/src/scss/pages/dashboard.scss
@@ -123,6 +123,7 @@
 		&-preview {
 			display: flex;
 			flex-direction: column;
+			justify-content: center;
 			align-items: center;
 			width: 30%;
 			min-height: 300px;
