--- a/assets/src/scss/pages/preview.scss
+++ b/assets/src/scss/pages/preview.scss
@@ -451,7 +451,7 @@
 		height: 360px;
 		width: 300px;
 		margin: 0 0 0 -190px;
-		padding: 30px 0 0;
+		padding: 25px 0 0;
 		background-color: #fff;
 		z-index: 999;
 		border-radius: 5px;
@@ -484,11 +484,23 @@
 			}
 		}
 
+		&-credentials-info {
+			text-align: center;
+			width: 100%;
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+			padding: 0 !important; /* stylelint-disable-line declaration-no-important */
+			margin: 15px 0 !important; /* stylelint-disable-line declaration-no-important */
+		}
+
 		&-fields {
 			display: none;
 			flex-direction: column;
 			align-items: center;
 			justify-content: center;
+			width: 100%;
 
 			p {
 				font-size: 12px;
